[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GameUI/EventUI/EventUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameUI/EventUI/ClockEvents/ClockUseEventUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainUI/DefaultFont.tres" type="DynamicFont" id=3]

[node name="ClockUseEventUI" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TitleLabel" parent="EventPanel/MarginContainer/Control/VBoxContainer" index="0"]
text = "Setting the Time"

[node name="BodyTextureRect" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer" index="0"]
visible = false
margin_right = 623.0

[node name="BodyLabel" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer" index="1"]
visible = false

[node name="BodyCenter" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer" index="2"]
visible = true
margin_left = 0.0

[node name="Panel" type="Panel" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter" index="0"]
margin_left = 241.0
margin_top = 111.0
margin_right = 381.0
margin_bottom = 151.0
rect_min_size = Vector2( 140, 40 )

[node name="SeparatorLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter/Panel" index="0"]
margin_left = 9.0
margin_top = 11.0
margin_right = 89.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = ":"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinuteLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter/Panel" index="1"]
margin_left = 57.0
margin_top = 11.0
margin_right = 89.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeriodLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter/Panel" index="2"]
margin_left = 99.0
margin_top = 11.0
margin_right = 131.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "AM"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter/Panel" index="3"]
margin_left = 9.0
margin_top = 11.0
margin_right = 41.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashTimer" type="Timer" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter/Panel" index="4"]
wait_time = 0.8
autostart = true

[node name="ModButton" type="Button" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer2" index="0"]
margin_left = 253.0
margin_right = 279.0
margin_bottom = 15.0
focus_mode = 0
text = "Mod"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetButton" type="Button" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 295.0
margin_right = 318.0
margin_bottom = 15.0
focus_mode = 0
text = "Set"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer2" index="2"]
margin_left = 334.0
margin_right = 370.0
text = "Leave"

[connection signal="timeout" from="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer/BodyCenter/Panel/FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="pressed" from="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer2/ModButton" to="." method="_on_ModButton_pressed"]
[connection signal="pressed" from="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer2/SetButton" to="." method="_on_SetButton_pressed"]
